--- a/finite.tex
+++ b/finite.tex
@@ -1337,13 +1337,13 @@ from which we deduce
 \end{example}
 
 \begin{example}[{\cite[Example 7.18]{Rezk512Notes}}]
-We can also make an explicit chromatic analysis of the homotopy element \(\eta \in \pi_1 \S\) studied in \Cref{HopfAlgebraLecture}.  As before, consider the complex \(\CP^2 = \Susp^2 C(\eta)\), and suppose that \(\CP^2\) splits as \(\S^2 \vee \S^4\).  In this case there would be a dotted retraction in the cofiber sequence
+We can also make an explicit chromatic analysis of the stable homotopy element \(\eta \in \pi_1 \S\) studied in \Cref{HopfAlgebraLecture}.  As before, consider the complex \(\CP^2 = \Susp^2 C(\eta)\), and suppose that \(\CP^2\) splits as \(\S^2 \vee \S^4\).  In this case there would be a dotted retraction in the cofiber sequence
 \begin{center}
 \begin{tikzcd}
 \S^2 \arrow{r} & \CP^2 \arrow{r} \arrow[densely dotted, bend right, "i"']{l} & \S^4.
 \end{tikzcd}
 \end{center}
-If this were possible, we would also be able to detect the retraction after chromatic localization---so, for instance, we could consider the cohomology theory \(E_{\G_m} = KU^\wedge_p\) from \Cref{ExampleOfMoravasTheoriesAtGm} and test this hypothesis in \(\G_m\)--local homotopy.  Writing \(t\) for a coordinate on \(\CP^\infty_{KU^\wedge_p}\), this cofiber sequence gives a short exact sequence on \(KU^\wedge_p\)--cohomology:
+If this were possible, we would also be able to detect the retraction after chromatic localization---so, for instance, we could consider the cohomology theory \(E_{\G_m} = KU^\wedge_p\) from \Cref{ExampleOfMoravasTheoriesAtGm} and test this hypothesis in \(\G_m\)--local homotopy.  Writing \(t\) for a coordinate on \(\CP^\infty_{KU^\wedge_p}\), this cofiber sequence of spaces gives a short exact sequence on \(KU^\wedge_p\)--cohomology:
 \begin{center}
 \begin{tikzcd}
 0 & (t) / (t)^2 \arrow{l} \arrow[bend left, densely dotted, "i^*"]{r} & (t) / (t)^3 \arrow{l} & (t)^2 / (t)^3 \arrow{l} & 0. \arrow{l}
