pointer to B.2 Structured Rings in A.3
Closes #29.

--- a/powerops.tex
+++ b/powerops.tex
@@ -744,6 +744,10 @@ With some effort, the construction of \(\sheaf O_{\top}\) outlined here extends 
 A topological enrichment can be thought of as an enhancement of a classical algebro-geometric object to a \textit{spectral} (or \textit{derived}) one.  This opens the door for exploring all sorts of phenomena: for instance, there is a very interesting manifestation of \index{Serre duality}Serre duality on \(\moduli{ell}\) in this enhanced setting, whose exploration is due to Stojanoska.
 \end{remark}
 
+\begin{remark}
+Still more related results are discussed in \Cref{OpenQuestionsSection}.
+\end{remark}
+
 
 
 
