add missing pullback stars
Closes #27.

--- a/finite.tex
+++ b/finite.tex
@@ -1351,12 +1351,12 @@ If this were possible, we would also be able to detect the retraction after chro
 \end{center}
 Because \(i\) is taken to be a retraction, the map \(i^*\) would satisfy \(i^*(t) = t \pmod{t^2}\), so that \(i^*(t) = t + at^2\) for some \(a\).  Additionally, \(i^*\) would be natural with respect to all \index{operations!Adams}cohomology operations on \(KU^\wedge_p\).  In particular, the element \((-1) \in \Z_p^\times \cong \Aut \G_m\) gives rise to an operation \(\psi^{-1}\), which acts by the \((-1)\)--series on the coordinate \(t\).  In the case that \(t\) is the coordinate considered in \Cref{CPinftyKUExample}, this gives \[\psi^{-1}(t) = [-1](t) = -\sum_{j=1}^\infty t^j \equiv -t - t^2 \pmod{t^3}.\]  We thus compute:
 \begin{align*}
-\psi^{-1} \circ i(t) & = i \circ \psi^{-1}(t) \\
-\psi^{-1}(t + at^2) & = i(-t) \\
+\psi^{-1} \circ i^*(t) & = i^* \circ \psi^{-1}(t) \\
+\psi^{-1}(t + at^2) & = i^*(-t) \\
 (-t - t^2) + a(-t - t^2)^2 & = -(t + at^2) \\
 -t + (a - 1) t^2 & = -t - at^2,
 \end{align*}
-so that we would arrive at a contradiction if the equation \(2a = 1\) were insoluable.  Note that this has no solution in \(\Z_2\), so that the attaching map \(\eta\) in \(\CP^2\) is nontrivial in \(\G_m\)--local homotopy at the prime \(2\) (hence also in the global homotopy group \(\pi_1 \S\)).  For \(p\) odd, this equation \emph{does} have a solution in \(\Z_p\), and it furthermore turns out that \(\eta = 0\) at odd primes.  This problem also disappears if we require \(i(t) = 2t + at^2\) instead, so that the above argument does not obstruct the triviality of \(2 \eta\) (and, indeed, \Cref{HF2ASSFigure} shows that the relation \(2 \eta = 0\) holds in \(2\)--adic homotopy).
+so that we would arrive at a contradiction if the equation \(2a = 1\) were insoluable.  Note that this has no solution in \(\Z_2\), so that the attaching map \(\eta\) in \(\CP^2\) is nontrivial in \(\G_m\)--local homotopy at the prime \(2\) (hence also in the global homotopy group \(\pi_1 \S\)).  For \(p\) odd, this equation \emph{does} have a solution in \(\Z_p\), and it furthermore turns out that \(\eta = 0\) at odd primes.  This problem also disappears if we require \(i^*(t) = 2t + at^2\) instead, so that the above argument does not obstruct the triviality of \(2 \eta\) (and, indeed, \Cref{HF2ASSFigure} shows that the relation \(2 \eta = 0\) holds in \(2\)--adic homotopy).
 \end{example}
 
 \begin{example}[{\cite[Example 7.17 and Corollary 5.12]{Rezk512Notes}}]
