kill bad /3 fraction in Fig 3.2
Closes #26.

--- a/anss3.tex
+++ b/anss3.tex
@@ -66,7 +66,7 @@
 \betaclass(54,6)
 
 % tower off of beta_3
-\class[circlen=2, "\frac{\alpha_{3/2} \beta_{3/3}}{3}" {below=0.2em, xshift=0.1cm}](45,3) \structline(42,2,-1)(45,3,-1)
+\class[circlen=2, "\alpha_{3/2} \beta_{3/3}" {below=0.2em, xshift=0.1cm}](45,3) \structline(42,2,-1)(45,3,-1)
 \betaclass(52,4)
 
 % d5s
