kill unnecessary "now"
Closes #23.

--- a/sigma.tex
+++ b/sigma.tex
@@ -801,7 +801,7 @@ We can describe the \(\F_p\)--scheme \(\InternalHom{FormalGroups}(\G_a^{\sm 2}, 
 where \(\operatorname{texp}(t) = \sum_{j=0}^{p-1} t^j / j!\) is the truncated exponential series.  It is easy to check that this ring of functions agrees with \(A^*\), and it requires hard work (although not much creativity) to check the remainder of the statement: that \(e \circ \hat \Pi_3\) factors through \(\Spec A_*\) and that the factorization is an isomorphism.
 \end{proof}
 
-We have now finally assembled our map of sequences,
+We have finally assembled our map of sequences,
 \begin{center}
 \begin{tikzcd}
 \Spec H_* B\SU \arrow{r} \arrow["\hat \Pi_2", "\cong"']{d} & \Spec H_* BU[6, \infty) \arrow{r} \arrow["\hat \Pi_3"]{d} & \Spec A^* \arrow{r} \arrow["\lambda", "\cong"']{d} & 0 \\
