--- a/powerops.tex
+++ b/powerops.tex
@@ -1110,11 +1110,11 @@ where the isomorphism is given by sending an operation \(f\co KO \to KO\) to the
 Having learned enough about \(KO\)--operations to justify the program enacted in the previous subsections, we now need to show that there exist sequences of \(p\)--adic integers satisfying those criteria.
 
 \begin{theorem}[{\cite{Mazur}}]\label{MazurMeasuresThm}
-For any auxiliary \(c \in \Z_p^\times\), there is a functional \(f_c\) given by
+For any auxiliary \(c \in \Z_p^\times\), the functional \(f_c\) given by
 \begin{align*}
 f_c(h) = \int_{\Z_p^\times} h(x) \mathrm d\mu_c & := \lim_{r \to \infty} \frac{1}{p^r} \sum_{\substack{0 \le i < p^r \\ p \nmid i}} \int_i^{ci} \frac{h(t)}{t} \mathrm dt
 \end{align*}
-which satisfies\footnote{With considerable effort, this output can be halved~\cite[Section 10.3]{AHR}.} \[f_c(x^{k \ge 1}) = -\frac{B_k}{k}(1 - p^{k-1})(1 - c^k) \quad \text{and} \quad \int_{\Z_p^\times} \mathrm d\mu_c = \frac{1}{p} \log(c^{p-1}). \pushQED\qed \qedhere \popQED\]
+satisfies\footnote{With considerable effort, this output can be halved~\cite[Section 10.3]{AHR}.} \[f_c(x^{k \ge 1}) = -\frac{B_k}{k}(1 - p^{k-1})(1 - c^k) \quad \text{and} \quad \int_{\Z_p^\times} \mathrm d\mu_c = \frac{1}{p} \log(c^{p-1}). \pushQED\qed \qedhere \popQED\]
 \end{theorem}
 
 \noindent This Theorem is stated in exactly the generality it was originally proven, and so you might wonder why Mazur had already proven \emph{exactly} what we needed.  To understand his program, recall these two facts about \(\zeta\):
