--- a/powerops.tex
+++ b/powerops.tex
@@ -560,10 +560,10 @@ The category of Dieudonn\'e modules with quasi-isogenies inverted becomes semisi
 The names supersingular and ordinary are partially explained by the following result, which says that ordinary curves form the generic case and that supersingular curves are comparatively very rare:
 
 \begin{lemma}[{\cite[Theorem V.4.1.c]{Silverman}, \cite[Corollary 4.3]{BehrensConstruction}}]
-The supersingular locus of \(\moduli{ell}\) is \(0\)--dimensional.\footnote{In fact, its image in the coarse moduli is the zero-locus of a polynomial, the \(p\){\th} Hasse invariant, which is of degree \((p-1)/2\).  Many of these roots are repeated: there are actually at most \(\lfloor (p-1)/12 \rfloor + 2\) distinct isomorphism classes over \(\overline{\F_p}\).} \qed
+The supersingular locus of \((\moduli{ell})^\wedge_p\) is \(0\)--dimensional.\footnote{In fact, its image in the coarse moduli is the zero-locus of a polynomial, the \(p\){\th} Hasse invariant, which is of degree \((p-1)/2\).  Many of these roots are repeated: there are actually at most \(\lfloor (p-1)/12 \rfloor + 2\) distinct isomorphism classes over \(\overline{\F_p}\).} \qed
 \end{lemma}
 
-\noindent We write \(i\co \moduli{ell}^{\ord} \to (\moduli{ell})^\wedge_p\) for the open inclusion of the ordinary locus.  We then plan to recover a topological enrichment \((\sheaf O_{\top})^\wedge_p\) of \(\moduli{ell}\) by constructing the pieces of the following pullback:
+\noindent We write \(i\co \moduli{ell}^{\ord} \to (\moduli{ell})^\wedge_p\) for the open inclusion of the ordinary locus.  We then plan to recover a topological enrichment \((\sheaf O_{\top})^\wedge_p\) of \((\moduli{ell})^\wedge_p\) by constructing the pieces of the following pullback:
 \begin{center}
 \begin{tikzcd}
 & (\sheaf O_{\top})^\wedge_p \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & (\sheaf O_{\top})^\wedge_{\moduli{ell}^{\ss}} \arrow{d} & \sheaf O^{\ss} \arrow[equal]{l} \\
