add missing completion in definition of psi^p
Closes #17.

--- a/powerops.tex
+++ b/powerops.tex
@@ -655,7 +655,7 @@ In order to apply this theorem, we need a guess as to what \(\theta\)--algebra s
 
 \noindent Defined via these moduli, \(V^\wedge_\infty\) has a natural structure as a solution to a moduli problem itself: it parameterizes pairs \((C, \eta\co \G_m \xrightarrow{\cong} \widehat C)\) of ordinary elliptic curves and markings of their associated formal groups.  It carries a natural interpretation as a \(\theta\)--algebra~\cite[Equation 5.3]{BehrensConstruction}, where the interesting operation \(\psi^p\) acts by
 \[
-\psi^p\co \left(C, \eta\co \G_m \xrightarrow\cong \widehat C\right) \mapsto \left(C^{(p)}, \eta^{(p)}\co \G_m \to C^{(p)}\right),\]
+\psi^p\co \left(C, \eta\co \G_m \xrightarrow\cong \widehat C\right) \mapsto \left(C^{(p)}, \eta^{(p)}\co \G_m \to \widehat C^{(p)}\right),\]
 where \(\eta^{(p)}\) is the factorization
 \begin{center}
 \begin{tikzcd}
